# NMEA_0183

./: CMakeLists.txt  test.db  unit_test_NMEA_0183.cpp
SQLite/: sqlite3_NMEA.c
SQlite/: CMakeLists.txt  unit-test.cpp
gpgga/: CMakeLists.txt  gpgga.c  gpgga.h  unit-test.cpp
gpgll/: CMakeLists.txt  gpgll.c  gpgll.h  unit-test.cpp
src/: .parse.h.swp  nmea.c  nmea.h  parse.c  parse.h
